# AppliedOverInternet

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  example_data.json  extract_mods_textures.py  nginx_template.conf  pyproject.toml  reorder.py  send_request.lua  server.py  start.sh
legacy/: extract_mods_textures.py
mounts/etc/grafana/: grafana.ini
mounts/etc/grafana/dashboards/: aoi.json
mounts/etc/grafana/provisioning/datasources/: datasource.yml
templates/: index.html
